--- a/springboot-01/pom.xml
+++ b/springboot-01/pom.xml
@@ -50,6 +50,62 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+				<configuration>
+					<skip>${maven.test.skip}</skip>
+					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
+					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+					<output>file</output>
+					<append>true</append>
+					<excludes>
+						<exclude>com/liujf/springboot01/vo/**</exclude>
+					</excludes>
+
+<!--					<rules>-->
+<!--						<rule implementation="org.jacoco.maven.RuleConfiguration">-->
+<!--							<element>BUNDLE</element>-->
+<!--							<limits>　　-->
+<!--								<limit implementation="org.jacoco.report.check.Limit">-->
+<!--									<counter>METHOD</counter>-->
+<!--									<value>COVEREDRATIO</value>-->
+<!--									<minimum>0.50</minimum>-->
+<!--								</limit>-->
+<!--								<limit implementation="org.jacoco.report.check.Limit">-->
+<!--									<counter>BRANCH</counter>-->
+<!--									<value>COVEREDRATIO</value>-->
+<!--									<minimum>0.50</minimum>-->
+<!--								</limit>-->
+<!--								<limit implementation="org.jacoco.report.check.Limit">-->
+<!--									<counter>CLASS</counter>-->
+<!--									<value>MISSEDCOUNT</value>-->
+<!--									<maximum>0</maximum>-->
+<!--								</limit>-->
+<!--							</limits>-->
+<!--						</rule>-->
+<!--					</rules>-->
+
+				</configuration>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<phase>test-compile</phase>
+					</execution>
+
+					<execution>
+						<id>jacoco-site</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
